2005-09-13  Julien Puydt  <jpuydt@free.fr>

	* src/main_window.cpp: Use the dialog.c api to show the incoming call
	popup, so gm doesn't freeze on win32 (gtk bug workaround).

2005-09-11  Julien Puydt  <jpuydt@free.fr>

	* src/tray.cpp: Use DISABLE_GNOME to see if we use eggtrayicon, since
	it's the condition used to know if it gets compiled (otherwise using
	DISABLE_GNOME on not WIN32 gives unresolved symbols).

2005-09-10  Julien Puydt  <jpuydt@free.fr>

	* src/gnomemeeting.cpp: Remove loopback from the list of available
	interfaces on win32 too.

2005-09-10  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Added -DPTRACING to mingw's default switches.

2005-09-07  Julien Puydt  <jpuydt@free.fr>

	* config.cpp, endpoint.cpp, pcssendpoint.cpp, urlhandler.cpp: Protect
	all calls to gm_tray_* functions by a test whether we really have a
	tray.

2005-09-05  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Added some linker switches to ARCH_OPAL_LIBS for
	mingw.

2005-09-05  Julien Puydt  <jpuydt@free.fr>

	* src/Makefile.am: Modified the _LDADD so GNOMEMEETING_LIBS comes
	after libgnomemeeting... helps linking on insane systems.

2005-08-31  Julien Puydt  <jpuydt@free.fr>

	* configure.in: Added mingw to the list of supported OS types,
	although it isn't quite true.

2005-08-31  Julien Puydt  <jpuydt@free.fr>

	* src/endpoint.cpp, src/sipendpoint.cpp, src/h323endpoint.cpp: Renamed
	some variables from 'interface' to 'iface', since it confuses some
	compilers.

2005-08-30  Julien Puydt  <jpuydt@free.fr>

	* src/ils.h: Defined LDAP_DEPRECATED, since what gnomemeeting uses
	is in the next version.
	* src/ils.cpp: Removed #include <ldap.h> since ils.h already does it.

2005-08-30  Julien Puydt  <jpuydt@free.fr>

	* src/pref_window.cpp: Renamed struct _GmPreferencesWindow's interface
	member to iface, since it seems confusing for some compilers.

2005-08-30  Julien Puydt  <jpuydt@free.fr>

	* lib/Makefile.am: Compile eggtrayicon.[ch] only when gnome isn't