@@ -1,3 +1,8 @@
+2005-09-13  Damien Sandras  <dsandras@gnome.org>
+
+	* src/endpoint.cpp: Fixed endpoint transmitted/received video 
+	bandwidth display.
+
 2005-09-13  Julien Puydt  <jpuydt@free.fr>
 
 	* src/main_window.cpp: Use the dialog.c api to show the incoming call
